<?xml version="1.0"?>
<package format="3">
  <name>ros2_cpp_component</name>
  <version>0.0.1</version>
  <description>ROS2 C++ component template with service and action examples</description>
  <maintainer email="Maik.Knof@gmx.de">Maik Knof</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ros2_cpp_component_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
